--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "swiper": "^8.0.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
