--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "swiper": "^8.0.7",
-    "web-vitals": "^2.1.4",
-    "wowjs": "^1.1.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
