--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "node": "^16.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^8.0.2",
+    "react-numeric-captcha": "^1.0.3",
     "react-player": "^2.10.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
