--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": "^16.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.2",
     "react-numeric-captcha": "^1.0.3",
     "react-player": "^2.10.0",
