--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-markdown": "^8.0.2",
     "react-numeric-captcha": "^1.0.3",
     "react-player": "^2.10.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
