netlify.toml config changed

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,15 @@
-build:
-    base: /opt/build/repo
-    command: CI=false yarn build
-    commandOrigin: config
+[build]
+    base = "/opt/build/repo"
+    command = "CI=false yarn build"
+    commandOrigin = "config"
 
-environment:
-    - NPM_FLAGS
-    publish: /opt/build/repo/build
-    publishOrigin: config
+[environment]
+    NPM_FLAGS
+    publish = "/opt/build/repo/build"
+    publishOrigin = "config"
 
-redirects:
-    - from: /*
-    status: 200
-    to: index.html
-    redirectsOrigin: config
+[[redirects]]
+    from = "/*"
+    status = 200
+    to = "index.html"
+    redirectsOrigin = "config"
