--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
-    base = "/opt/build/repo"
+    base = "/"
     command = "CI=false yarn build"
     commandOrigin = "config"
 
 [environment]
-    publish = "/opt/build/repo/build"
+    publish = "/build"
     publishOrigin = "config"
 
 [[redirects]]
